--- a/second.css
+++ b/second.css
@@ -1,9 +1,52 @@
-body{
-border: 2px solid black;
+*{
+    margin: 0;
+    padding: 0;
 }
-td{
-border: 2px solid;}
-th{
-    border: 2px solid;
+body{
+    background-image: url(bg.jpg);
+    background-position: center;
+    background-size:cover;
+}
+a:hover{
+   background-color: white;}
+   a{
+    color: rgb(250, 146, 9);
+    padding-left: 0.9cm;
+   }
+   #Home{
+    color: whitesmoke;
+   }
+   a :visited #Home{
+    color: aliceblue;
+   }
+   #AboutMe{
+    padding-top: 1cm;
+    color: aliceblue;
+   }
+   article>p{
+    color: aqua;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
+   }
+   .HELLO{ color: aliceblue;
+font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+font-weight: 900;
+font-size: larger;}
+#MySkills{
+    color: beige;
+}
+table{
+    border: collapse;
+}
+TH,td{
+    border: 3px solid rgb(252, 5, 5);
+}
+#contact{
+    padding-top: 1cm;
+    color: azure;
+}
+
+footer{
+    padding-top: 1cm;
+    color: antiquewhite;
 }
